--- a/SMHET_Redline.tex
+++ b/SMHET_Redline.tex
@@ -120,7 +120,7 @@ the hot carrier generation~\cite{GZG_JPCC_2013,ZG_JPCC_2014}.  A similar approac
 that nanorods are exceptionally good structures for hot carrier generation~\cite{KPB_SciRep_2015}.  Garc\'ia de Abajo and co-workers recently described a 
 quantum master equation approach with an underlying PIW model that elucidated a number of key factors that influence
 hot carrier excitation and decay dynamics~\cite{SAG_ACSPhotonics_2016}. \textcolor{red}{Nordlander and co-workers have directly 
-compared free-electron and Jellium-LDA models and found that correlation effects within the LDA have a negligible impact 
+compared free-electron and Jellium-LDA models and found that correlation effects within LDA have a negligible impact 
 on hot carrier generation and dynamics in Ag nanospheres compared to geometric effects~\cite{MLK_ACSNano_2014}.} 
 \textcolor{red}{The utilization of atomistic DFT by Sundararaman {\it et al.}~\cite{SNJ_NatComm_2014}, 
 Louie and co-workers~\cite{BMN_NatComm_2015}, and Brown {\it et al}~\cite{BSN_ACSNano_2016} 
@@ -191,20 +191,14 @@ ground-state configuration (see Supporting Information and Figure S4 for more de
 
 Given the simplicity of the underlying electronic Hamiltonian, the field-free Hamiltonian matrix is diagonal, and only the dipolar
 interaction of the nanoparticle with the external field can induce transitions among the electronic configurations, hence the treatment in 
-this work neglects excited-state thermalization contributions from electron-electron scattering.  
-
-
-%1. Band structure / d electron effects:  The modified text for paragraph 1 of page 5 (page 6 in revised MS) continues to give the impression that free electron and ab initio approaches give the same result.  I think the authors may have misinterpreted Ref 24 (Nordlander et al.): that reference compares free electron models with jellium TD-DFT and finds no difference, but both these methods lack detailed band structure.  What that concludes is that electron exchange/correlations effects at the jellium level are negligible.  (Jellium DFT/TD-DFT calculations are not ab initio.)
-
+this work neglects excited-state thermalization contributions from electron-electron scattering. %1. Band structure / d electron effects:  The modified text for paragraph 1 of page 5 (page 6 in revised MS) continues to give the impression that free electron and ab initio approaches give the same result.  I think the authors may have misinterpreted Ref 24 (Nordlander et al.): that reference compares free electron models with jellium TD-DFT and finds no difference, but both these methods lack detailed band structure.  What that concludes is that electron exchange/correlations effects at the jellium level are negligible.  (Jellium DFT/TD-DFT calculations are not ab initio.)
 %More importantly, in expanding on this point during revision, the authors have mixed up band structure effects including d electrons, which are a single-particle property, with correlation effects, which are many-body.  The correct explanation here is that Ref 24 and 27 show that correlation effects are not particularly important, but Ref 18 and 21 show that band structure effects are very important in gold, but less so in silver due the d band positions.  The rest of the authors response by including silver calculations is greatly appreciated, but the above terminology (correlation vs band structure effects) must be rectified throughout for the updated discussions to be correct.
-
-As shown in previous work, the inclusion of many-body effects can impact the calculation
-of hot-carrier distributions when transitions from $d$ bands are relevant, which is in principle whenever the perturbing
-field contains frequency components that overlap with interband transitions involving $d$ bands~\cite{MLK_ACSNano_2014,BMN_NatComm_2015, Atwater_Review}.  
-In this work, we explore SMA involving Au and Pt nanoparticles, and we wish to emphasize that the many-body effects 
+\textcolor{red}{The underlying simplicity of the Hamiltonian and single-particle basis set also precludes desciption
+of the material-dependent band-structure within this approach.  
+In this work, we explore SMA involving Au and Pt nanoparticles, and we wish to emphasize that the band-structure effects 
 which are neglected in this work are expected to have an impact on the hot-carrier distributions in both of these metals, 
 as both have energetic gaps between the $d$-band and the Fermi level which are smaller than energy components of the optical fields
-considered here.  Examination of these two metals within our model still presents considerable value because it provides
+considered here.}  Examination of these two metals within our model still presents considerable value because it provides
 insight into hot-carrier dynamics in two distinct regimes of the driving field, which includes a superposition
 of the plasmon and dielectric scattering fields.  In particular, these regimes include (1) when the plasmon 
 resonance and the dielectric scattering resonance overlap in energy with transitions in the quantum model 
@@ -215,12 +209,12 @@ We also choose Au and Pt because the SMA phenomenon
 has been experimentally demonstrated in both metals, including in the work by Sun and co-workers~\cite{ZHX_NatPhoton_2016} which
 considered SiO$_2$ nanospheres decorated with Pt nanoparticles of similar size to the particles considered here, and the work of 
 Zhang {\it et al.}~\cite{ZJM_ACSNano_2016} which considered
-TiO$_2$ nanospheres decorated with large Au nanoparticles.  It has been shown that many-body effects have less of an impact
+TiO$_2$ nanospheres decorated with large Au nanoparticles.  It has been shown that \textcolor{red}{band-structure effects} have less of an impact
 on hot-carrier dynamics in Ag nanoparticles due to the relatively large ($> 3eV)$ gap between the $d$ bands and the Fermi level~\cite{MLK_ACSNano_2014,Atwater_Review}, and so
 analogous calculations have been performed on Ag-decorated nanospheres showing similar qualitative features
 as results with Au and Pt (see Supporting Information and Figure S3).
   Future work will focus on further developments of this modeling approach to include
-many-body effects, and investigation of these effects on the hot-carrier distributions and dynamics resulting from SMA.  It is expected
+\textcolor{red}{band-structure and many-body effects (elaborate)}, and investigation of these effects on the hot-carrier distributions and dynamics resulting from SMA.  It is expected
 that these effects will play a role in the hot-carrier dynamics in several ways, including by changing the available excitation/transition channels
 by mixing of the single-particle states, modifying the transition rates through modification of transition dipole moments, and by enabling
 thermalization of the excited carriers through electron-electron scattering.
